--- a/studio/package.json
+++ b/studio/package.json
@@ -8,33 +8,33 @@
   "scripts": {
     "start": "sanity start",
     "build": "sanity build",
-    "deploy": "sanity deploy"
+    "deploy": "sanity deploy",
+    "dev": "sanity dev"
   },
   "keywords": [
     "sanity"
   ],
   "author": "Sanity.io <hello@sanity.io>",
   "dependencies": {
-    "@sanity/base": "^2.31.0",
-    "@sanity/color-input": "^2.31.0",
-    "@sanity/components": "^2.14.0",
-    "@sanity/core": "^2.31.0",
-    "@sanity/default-layout": "^2.31.0",
-    "@sanity/default-login": "^2.31.0",
-    "@sanity/desk-tool": "^2.31.0",
-    "@sanity/uuid": "^3.0.1",
-    "@sanity/vision": "^2.31.0",
+    "@sanity/color-input": "^4.0.6",
+    "@sanity/uuid": "^3.0.2",
+    "@sanity/vision": "^4.10.3",
     "lodash.get": "^4.4.2",
     "pluralize": "^8.0.0",
-    "react": "^17.0",
-    "react-dom": "^17.0",
-    "sanity-plugin-hotspot-array": "^0.0.8",
-    "sanity-plugin-media": "^1.4.10",
-    "sanity-plugin-mux-input": "^1.1.9",
+    "prop-types": "^15.8.1",
+    "react": "^19.1",
+    "react-dom": "^19.1",
+    "sanity": "^4.10.3",
+    "sanity-plugin-hotspot-array": "^3.0.1",
+    "sanity-plugin-media": "^4.0.0",
+    "sanity-plugin-mux-input": "^2.9.0",
     "slug": "^5.3.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "@sanity/eslint-config-studio": "^5.0.2",
+    "@types/react": "^19.1",
+    "typescript": "^5.8"
   }
 }
