--- a/studio/package.json
+++ b/studio/package.json
@@ -17,6 +17,7 @@
   "author": "Sanity.io <hello@sanity.io>",
   "dependencies": {
     "@sanity/color-input": "^4.0.6",
+    "@sanity/functions": "^1.0.3",
     "@sanity/uuid": "^3.0.2",
     "@sanity/vision": "^4.10.3",
     "lodash.get": "^4.4.2",
@@ -32,9 +33,9 @@
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "prettier": "^2.6.2",
     "@sanity/eslint-config-studio": "^5.0.2",
     "@types/react": "^19.1",
+    "prettier": "^2.6.2",
     "typescript": "^5.8"
   }
 }
